@@ -4,8 +4,8 @@ dnl First, define all of the version numbers up front.
 dnl In particular, this allows the version macro to be used in AC_INIT
 
 dnl These first two version numbers are updated automatically on each release.
-m4_define([LIBARCHIVE_VERSION_S],[3.0.0a])
-m4_define([LIBARCHIVE_VERSION_N],[3000000])
+m4_define([LIBARCHIVE_VERSION_S],[3.0.1b])
+m4_define([LIBARCHIVE_VERSION_N],[3000001])
 
 dnl bsdtar and bsdcpio versioning tracks libarchive
 m4_define([BSDTAR_VERSION_S],LIBARCHIVE_VERSION_S())
