@@ -138,13 +138,13 @@ extern "C" {
  * #endif
  */
 /* Note: Compiler will complain if this does not match archive_entry.h! */
-#define	ARCHIVE_VERSION_NUMBER 3000000
+#define	ARCHIVE_VERSION_NUMBER 3000001
 __LA_DECL int		archive_version_number(void);
 
 /*
  * Textual name/version of the library, useful for version displays.
  */
-#define	ARCHIVE_VERSION_STRING "libarchive 3.0.0a"
+#define	ARCHIVE_VERSION_STRING "libarchive 3.0.1b"
 __LA_DECL const char *	archive_version_string(void);
 
 /* Declare our basic types. */
